--- a/manifest.json
+++ b/manifest.json
@@ -3,10 +3,11 @@
 
   "name" : "Live Edit",
   "description" : "Live Edit Plug-in with Eclipse by Kten",
-  "version" : "0.0.1",
+  "version" : "1.0",
 
   "browser_action": {
-    "default_icon": "image/thumbnailIcon.png"
+    "default_icon": "image/thumbnailIcon.png",
+    "default_popup" : "page/main.html"
   },
 
   "background": {
@@ -14,8 +15,17 @@
     "persistent": false
   },
 
+  "content_scripts":[
+    {
+      "matches" : ["<all_urls>"],
+      "js": ["js/content.js"],
+      "run_at" : "document_start"
+    }
+  ],
+
   "permissions": [
     "<all_urls>",
+    "activeTab",
     "contextMenus"
   ],
 
