--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
   "content_scripts":[
     {
       "matches" : ["<all_urls>"],
-      "js": ["js/content.js"],
+      "js": ["js/jquery/jquery-1.11.3.min.js", "js/content.js"],
       "run_at" : "document_start"
     }
   ],
@@ -27,6 +27,10 @@
     "<all_urls>",
     "activeTab",
     "contextMenus"
+  ],
+
+  "web_accessible_resources": [
+    "css/inspect.css"
   ],
 
   "icons" : {
