--- a/manifest.json
+++ b/manifest.json
@@ -26,7 +26,9 @@
   "permissions": [
     "<all_urls>",
     "activeTab",
-    "contextMenus"
+    "tabs",
+    "contextMenus",
+    "debugger"
   ],
 
   "web_accessible_resources": [
