--- a/manifest.json
+++ b/manifest.json
@@ -6,8 +6,7 @@
   "version" : "1.0",
 
   "browser_action": {
-    "default_icon": "image/thumbnailIcon.png",
-    "default_popup" : "page/main.html"
+    "default_icon": "image/thumbnailIcon.png"
   },
 
   "background": {
